[package]
name = "lcp-visualize"
version = "0.1.0"
edition = "2021"
description = "Visualization of Le Chatelier's Principle"
exclude = ["dist", "build"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_wasm_window_resize = "0.1.1"
chatelier = "0.1.0"
chem-eq = "0.3.1"

[build-dependencies]
embed-resource = "1.4"

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"
